When parsing a <script> with an unterminated comment inside, stop at the first </script> we hit, not the last one.  Bug 219504, patch by Blake Kaplan <mrbkap@rice.edu>, r=bzbarsky, sr=rbs